[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/button/btnleft.png" type="Texture" id=1]
[ext_resource path="res://assets/button/btnright.png" type="Texture" id=2]
[ext_resource path="res://src/Buttons/VirtualButton.gd" type="Script" id=3]
[ext_resource path="res://assets/button/btnjump.png" type="Texture" id=4]
[ext_resource path="res://assets/button/btnrightclicked.png" type="Texture" id=5]
[ext_resource path="res://assets/button/btnjumpclicked.png" type="Texture" id=6]
[ext_resource path="res://assets/button/btnleftclicked.png" type="Texture" id=7]

[node name="VirtualButton" type="Node2D"]
script = ExtResource( 3 )

[node name="leftbutton" type="TouchScreenButton" parent="."]
normal = ExtResource( 7 )
pressed = ExtResource( 1 )

[node name="rightbutton" type="TouchScreenButton" parent="."]
position = Vector2( 223, 0 )
normal = ExtResource( 5 )
pressed = ExtResource( 2 )

[node name="jumpbutton" type="TouchScreenButton" parent="."]
position = Vector2( 1390, 0 )
normal = ExtResource( 6 )
pressed = ExtResource( 4 )

[connection signal="pressed" from="leftbutton" to="." method="_on_leftbutton_pressed"]
[connection signal="released" from="leftbutton" to="." method="_on_leftbutton_released"]
[connection signal="pressed" from="rightbutton" to="." method="_on_rightbutton_pressed"]
[connection signal="released" from="rightbutton" to="." method="_on_rightbutton_released"]
[connection signal="pressed" from="jumpbutton" to="." method="_on_jumpbutton_pressed"]
[connection signal="released" from="jumpbutton" to="." method="_on_jumpbutton_released"]
